--- a/tests/test.css
+++ b/tests/test.css
@@ -1,3 +1,3 @@
 .test {
-    background-image: url("http://www.example.com/external.jpg");
+    background-image: url("http://www.example.com/external.jpg?foo=bar");
 }
